syntax = "proto3";

package product.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {
    option (google.api.http) = {
      post: "/v1/products",
      body: "*",
    };
  }

  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {
    option (google.api.http) = {get: "/v1/products"};
  }

  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {get: "/v1/products/{id}"};
  }

  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {
    option (google.api.http) = {
      put: "/v1/products/{product.id}",
      body: "*",
    };
  }

  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {
    option (google.api.http) = {delete: "/v1/products/{id}"};
  }
}

message Product {
  string id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
  string sku = 2 [(buf.validate.field).string.min_len = 1];
  string title = 3 [(buf.validate.field).string.min_len = 1];
  string price = 4 [(buf.validate.field).string.min_len = 1];
  string image = 5 [(buf.validate.field).string.min_len = 1];
  int32 quantity = 6 [(buf.validate.field).int32.gt = 0];
}

message CreateProductRequest {
  Product product = 1;
}

message CreateProductResponse {
  Product product = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {}
